# autogen-agentic-design

./: README.md  pyproject.toml
notebooks/: L1_Multi-Agent_Conversation_and_Stand-up_Comedy.ipynb  L2_Sequential_Chats_and_Customer_Onboarding.ipynb  L3_Reflection_and_Blogpost_Writing.ipynb  L4_Tool_Use_and_Conversational_Chess.ipynb  L5_Coding_and_Financial_Analysis.ipynb  L6-Planning_and_Stock_Report_Generation.ipynb  README.md
notebooks/coding/: analyze_and_plot_stock_data.py  fetch_compare_sp500_nvda.py  fetch_nvda_stock_data.py  fetch_nvidia_stock_data.py  fetch_stock_data.py  get_nvda_stock_data.py  plot_stock_gains.py  stock_plot.py  tmp_code_87e4387bb6aedd7332a197baec59d899.sh  visualize_nvda_sp500_comparison.py
