[tool.poetry]
name = "autogen-agentic-design"
version = "0.1.0"
description = "Autogen code"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
autogen = "^1.0.16"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

