[tool.poetry]
name = "autogen-agentic-design"
version = "0.1.0"
description = "Autogen code"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
autogen = "^1.0.16"
pandas = "^2.2.2"
jupyter = "^1.0.0"
notebook = "^7.2.1"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

